--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,7 +8,7 @@
       <%= book.name %> - <%= book.author %>
       <%= link_to "Ver", book_path(book) %>
       <%= link_to "Editar", edit_book_path(book) %>
-      <%= link_to "Excluir", book_path(book), method: :delete, data: { confirm: "Tem certeza?" } %>
+      <%= link_to "Excluir", book_path(book), method: :delete%>
     </li>
   <% end %>
 </ul>
