--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Usuários</h1>
-<ul>
-    <%= @users.each do |user| %>
-    <li>
-        <%= user.name%> - <%= user.email%>
-    </li>
-</ul>
 
-<h2>Cadastrar novo usuário</h2>
-<%= form_with model: @user, url: users_path, local: true do |form|%>
+<ul>
+  <% @users.each do |user| %>
+    <li>
+      <%= user.name %> - <%= user.email %>
+    </li>
+  <% end %>
+</ul>
