--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -13,7 +13,7 @@
 
   <p>
     <%= form.label :available, "Disponível?" %><br>
-    <%= form.check_box :available %>
+    <%= form.select :available, ['Sim', 'Não'] %>
   </p>
 
   <%= form.submit "Salvar" %>
