--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<h1>User#show</h1>
-<p>Find me in app/views/user/show.html.erb</p>
+<h1>Perfil do Usuário</h1>
+<p>Nome: <%= @user.name %></p>
+<p>Email: <%= @user.email %></p>
+<p>ID: <%= @user.id %></p>
