--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_with model: @book, local: true do |form| %>
   <p>
-    <%= form.label :nome, "Título" %><br>
-    <%= form.text_field :nome %>
+    <%= form.label :title, "Título" %><br>
+    <%= form.text_field :title %>
   </p>
 
   <p>
