--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editar Livro</h1>
+
+<%= link_to "Página Inicial", users_path %>
+
+<%= form_with model: @book, local:true do |form| %>
+  <div>
+    <%= form.label :title, "Título" %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div>
+    <%= form.label :author, "Autor" %>
+    <%= form.text_field :author %>
+  </div>
+  <div>
+    <%= form.submit "Salvar" %>
+  </div>
+<% end %>
+
+<hr>
+
+<%= button_to "Excluir", book_path(@book), method: :delete %>
+<%= link_to "Voltar", books_path %>
